# FirstPersonTerrainSketch

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  compile.sh  main.cpp  mainwindow.ui  run.sh
algorithms/: conversion_to_3d.cpp  conversion_to_3d.h  erosion.cpp  erosion.h  gauss.cpp  gauss.h  inverse.cpp  inverse.h  polyline_completion.cpp  polyline_completion.h  solver.cpp  solver.h
algorithms/deformation/: deformation.cpp  deformation.h  extended_feature_matching.cpp  extended_feature_matching.h  feature_matching.cpp  feature_matching.h  protruded_silhouettes_matching.cpp  protruded_silhouettes_matching.h
data/: test.vect
data/planar_sketches/: test3_planar.vect  test4_planar.vect  test5_planar.vect  test6_planar.vect  test7_planar.vect
data/terrain_data/: CD.ter  GC0.ter  GC3.ter  KA.ter  LP.ter
geometry/: polyline.cpp  polyline.h  sketch.cpp  sketch.h  spline.cpp  spline.h  stroke.cpp  stroke.h  terrain.cpp  terrain.h
gui/: mainwindow.cpp  mainwindow.h  sketch_viewer.cpp  sketch_viewer.h  terrain_fast_renderer.cpp  terrain_fast_renderer.h  terrain_viewer.cpp  terrain_viewer.h
shaders/terrain/: fs.glsl  normals_fs.glsl  normals_vs.glsl  tcs.glsl  tes.glsl  vs.glsl  vs_for_tes.glsl
tools/: camera_info.cpp  camera_info.h  deformation_weighting.h  evaluation.cpp  evaluation.h  feature_detection.cpp  feature_detection.h  math_extras.h  offline_renderer.cpp  offline_renderer.h  offline_terrain_renderer.cpp  offline_terrain_renderer.h  shader_utils.h  silhouette_extractor.cpp  silhouette_extractor.h
tools/ppa/: dtts_ppa.cpp  dtts_ppa.h
